Using a mock json response to test endpoint.